# cgen

./: .gitignore  CMakeLists.txt
src/: alloc.c  alloc.h  colors.h  def.h  exec.c  exec.h  generate.c  generate.h  main.c  os.h  project.h  string_funcs.c  string_funcs.h  term.c  term.h
src/commands/: add.c  add.h  build.c  build.h  generate.c  generate.h  project.c
src/helpers/: check_pointer.c  check_pointer.h  colors.h  def.h  dir.c  dir.h  string_funcs.c
src/utils/: cmake_get.c  cmake_get.h  exec.c  strings.c  strings.h  term.c  term.h
